# file_mover

./: .gitignore  CMakeLists.txt  CMakeSettings.json  file_mover.sln
file_mover/: config.ini  directory_copy.cpp  directory_copy.hpp  file_mover.cpp  file_mover.rc  file_mover.vcxproj  file_mover.vcxproj.filters  logger.cpp  logger.hpp  pch.h  resource.h
inc/: directory_copy.hpp  file_mover.rc  logger.hpp
src/: directory_copy.cpp  file_mover.cpp  logger.cpp
